--- a/references.bib
+++ b/references.bib
@@ -239,3 +239,19 @@
   title = {Java 9: Release date and new features}
   }
 
+@online{survey12,
+  URL = {https://docs.google.com/spreadsheets/d/1owWD9lV9LdZ9aNfCJbWgoJjhvFOyEHOLE7mQduEV4Y0},
+  URLDate = {2018-05-07},
+  year = 2018,
+  Author = {Andrew Wonnacott},
+  title = {COS 445 PS1 / PS2 Feedback (Responses)}
+  }
+
+@online{survey34,
+  URL = {https://docs.google.com/spreadsheets/d/1lWdcFhB_D671LNYtbP6_hAWZaYklk-niNp_a2aqqDck},
+  URLDate = {2018-05-07},
+  year = 2018,
+  Author = {Andrew Wonnacott},
+  title = {COS 445 PS3 / PS4 Feedback (Responses)}
+  }
+
